fix mobile display issues, add menu collapse on click

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,31 @@
+html {
+  margin:0;
+  padding:0;
+}
+
 body {
   padding: 0;
+  margin:0;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color:rgba(82, 82, 140, 1);
   color:white;
   width:100vw;
-  overflow-x:hidden;
+  max-width:100%;
+  height:auto;
+  max-height:100%;
+  /* overflow-x:hidden; */
+}
+
+header {
+  width:100%;
+  max-width:100%;
+  padding:0;
+  margin:0;
+}
+
+main {
+  padding:0;
+  margin:0;
 }
 
 a {
@@ -33,10 +54,14 @@ img {
 }
 
 section {
-  height:100vh;
-  /* width:100%; */
-  padding-top:60px;
+  min-height:100vh;
+  width:100%;
+  padding-top:3rem;
   margin:0;
+}
+
+#top {
+  margin-top:60px;
 }
 
 #about {
@@ -97,6 +122,10 @@ section {
 }
 
 footer {
-  /* width:100%; */
+  margin-right:0 ;
+  padding:0;
+  width:100%;
+  max-width:100%;
   height:auto;
+  min-height:3rem;
 }
